--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "yii-dream-team/yii2-upload-behavior": "^1.1",
         "bower-asset/font-awesome": "^4.7",
         "bower-asset/owl.carousel": "^2.2",
-        "bower-asset/magnific-popup": "^1.1"
+        "bower-asset/magnific-popup": "^1.1",
+        "ext-gd": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
