--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "bower-asset/owl.carousel": "^2.2",
         "bower-asset/magnific-popup": "^1.1",
         "ext-gd": "*",
-        "elasticsearch/elasticsearch": "^6"
+        "elasticsearch/elasticsearch": "^6",
+        "yii-cms/yii2-robokassa": "^1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
