add ELFinder - end of part 8

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "phpoffice/phpexcel": "^1.8",
         "ruecoder/phpexcel": "dev-master",
         "ruecoder/excelbundle": "dev-master",
-        "mihaildev/yii2-ckeditor": "^1.0"
+        "mihaildev/yii2-ckeditor": "^1.0",
+        "mihaildev/yii2-elfinder": "^1.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
