--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "ruecoder/phpexcel": "dev-master",
         "ruecoder/excelbundle": "dev-master",
         "mihaildev/yii2-ckeditor": "^1.0",
-        "mihaildev/yii2-elfinder": "^1.2"
+        "mihaildev/yii2-elfinder": "^1.2",
+        "fishvision/yii2-migrate": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
