--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,9 @@
         "ruecoder/excelbundle": "dev-master",
         "mihaildev/yii2-ckeditor": "^1.0",
         "mihaildev/yii2-elfinder": "^1.2",
-        "fishvision/yii2-migrate": "^1.0"
+        "fishvision/yii2-migrate": "^1.0",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
