--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "mihaildev/yii2-elfinder": "^1.2",
         "fishvision/yii2-migrate": "^1.0",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "^6.2",
+        "guzzlehttp/guzzle": "^7.4",
         "filsh/yii2-oauth2-server": "^2.0"
     },
     "require-dev": {
@@ -56,7 +56,10 @@
         "codeception/module-yii2": "^1.0",
         "codeception/module-filesystem": "^1.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
-        "symfony/browser-kit": ">=2.7 <=4.2.4"
+        "symfony/browser-kit": ">=2.7 <=4.2.4",
+        "flow/jsonpath": "^0.3.4",
+        "codeception/module-rest": "dev-master",
+        "codeception/module-phpbrowser": "1.*"
     },
     "config": {
         "process-timeout": 1800,
