--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "fishvision/yii2-migrate": "^1.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.4",
-        "filsh/yii2-oauth2-server": "^2.0"
+        "filsh/yii2-oauth2-server": "^2.0",
+        "zircote/swagger-php": "^2.x-dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
