--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -105,7 +105,7 @@ server {
 
    server_name api.shop.test;
    root        /app/api/web/;
-   index       index.php;
+   index       index.php index.html;
 
    access_log  /app/vagrant/nginx/log/api-access.log;
    error_log   /app/vagrant/nginx/log/api-error.log;
