--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.4",
         "filsh/yii2-oauth2-server": "^2.0",
-        "zircote/swagger-php": "^2.x-dev"
+        "zircote/swagger-php": "^2.x-dev",
+        "ext-xmlwriter": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
