--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,9 @@
         "guzzlehttp/guzzle": "^7.4",
         "filsh/yii2-oauth2-server": "^2.0",
         "zircote/swagger-php": "^2.x-dev",
-        "ext-xmlwriter": "*"
+        "ext-xmlwriter": "*",
+        "softcreatr/jsonpath": "^0.5 || ^0.7",
+        "drewm/mailchimp-api": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -59,7 +61,6 @@
         "codeception/module-filesystem": "^1.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
         "symfony/browser-kit": ">=2.7 <=4.2.4",
-        "flow/jsonpath": "^0.3.4",
         "codeception/module-rest": "dev-master",
         "codeception/module-phpbrowser": "1.*"
     },
