--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "zircote/swagger-php": "^2.x-dev",
         "ext-xmlwriter": "*",
         "softcreatr/jsonpath": "^0.5 || ^0.7",
-        "drewm/mailchimp-api": "dev-master"
+        "drewm/mailchimp-api": "dev-master",
+        "ext-curl": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
