--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,10 @@
         "ext-xmlwriter": "*",
         "softcreatr/jsonpath": "^0.5 || ^0.7",
         "drewm/mailchimp-api": "dev-master",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "yiisoft/yii2-redis": "^2.0",
+        "yiisoft/yii2-queue": "^2.0",
+        "doctrine/persistence": "3.0.x-dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
