--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
         "ext-curl": "*",
         "yiisoft/yii2-redis": "^2.0",
         "yiisoft/yii2-queue": "^2.0",
-        "doctrine/persistence": "3.0.x-dev"
+        "doctrine/persistence": "3.0.x-dev",
+        "league/flysystem": "2.x-dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
